# dracs

./: .codacy.yml  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  BIOS-filename.ini  CHANGELOG.md  README.md  codecov.yml  drac-passwords.ini  drac-passwords.ini.example  dracs-webapp  dracs.py  dracs.spec  gunicorn.conf.py  pyproject.toml  python-dracs.spec  requirements-dev.txt  requirements.txt  run-webapp.sh  setup.cfg
.github/workflows/: codecov.yml  flake8-lint.yml  run-tests.yml  semantic-release.yml  sync-back.yml
logrotate/: dracs
nginx/: dracs.conf.example  dracs_ssl.conf.example
src/dracs/: __init__.py  api.py  audit.py  cli.py  commands.py  config.py  config_collector.py  db.py  display.py  google_auth.py  gunicorn.conf.py  jobqueue.py  racadm.py  redfish.py  sites.py  snmp.py  sol.py  tokens.py  users.py  validation.py  vnc.py  webapp.py  webapp_runner.py
src/dracs/examples/: .env.example  drac-passwords.ini.example  google_client_secret.json.example  schedule.ini.example
src/dracs/examples/nginx/: dracs.conf.example  dracs_ssl.conf.example
src/dracs/static/novnc/app/: ui.js
src/dracs/templates/: attr_catalog.html  config.html  console.html  console_connect.html  console_multi.html  console_quads.html  index.html  sites.html  users.html
src/dracs_client/: __init__.py  auth.py  cli.py  commands.py  config.py
systemd/: dracs-webapp.service
tests/: conftest.py  test_api.py  test_attr_catalog_api.py  test_audit.py  test_cli.py  test_cli_init.py  test_cli_main.py  test_cli_unit.py  test_cli_user.py  test_client_auth.py  test_client_cli.py  test_client_cli_auth.py  test_client_commands.py  test_client_config.py  test_commands_coverage.py  test_commands_fw_bios.py  test_commands_idracjobs.py  test_commands_jobs.py  test_commands_list.py  test_commands_tsr.py  test_commands_unit.py  test_config.py  test_config_api.py  test_config_collector.py  test_database.py  test_db_config.py  test_db_extended.py  test_dependencies.py  test_display.py  test_firmware_archive.py  test_force_update.py  test_google_auth.py  test_host_list.py  test_ini_migration.py  test_job_processor.py  test_jobqueue.py  test_new_features.py  test_quads.py  test_redfish.py  test_remoteimage.py  (+26 more)
