[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dracs"
version = "0.1.0"
description = "Dell Rack & Asset Control System - CLI inventory tool for managing Dell bare-metal systems"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "pysnmp>=7.1.8",
    "sqlalchemy>=2.0.0",
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
]

[project.scripts]
dracs = "dracs.cli:main_cli"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "python-semantic-release",
]

[tool.semantic_release]
version_variables = [
    "src/dracs/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:project.version"
]
build_command = "false"
commit_message = "chore(release): v{version} [skip ci]"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ['py312']
