[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dracs"
version = "2.15.0"
description = "Dell Rack & Asset Control System - CLI inventory tool for managing Dell bare-metal systems"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.1.0",
    "tabulate>=0.9.0",
    "rich>=13.9.0",
    "pysnmp>=7.1.8",
    "sqlalchemy>=2.0.0",
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
    "websockify>=0.12.0",
    "defusedxml>=0.7.1",
    "google-auth-oauthlib>=1.2.0",
    "cryptography>=42.0.0",
    "uv",
    "build",
    "twine",
]

[project.scripts]
dracs = "dracs.cli:main_cli"
dracs-webapp = "dracs.webapp_runner:main"
dracs-client = "dracs_client.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "python-semantic-release",
]

[tool.semantic_release]
version_variables = [
    "src/dracs/__init__.py:__version__",
    "src/dracs_client/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version"
]
build_command = "pip install uv && uv build"
commit_message = "chore(release): v{version} [skip ci]"

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.hatch.build.targets.sdist]
exclude = [
  "/.claude",
  "/claude.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dracs", "src/dracs_client"]
exclude = [
  "/.claude",
  "/claude.md",
]

[tool.coverage.run]
relative_files = true
omit = ["tests/*"]

